k8s/test-basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-basic-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    ingress.kubernetes.io/rewrite-target: 
spec:
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: 
            backend:
              service:
                name: test-basic-service
                port:
                  number: 8081
